# styler

./: .codacy.yml  .gitmodules  .travis.yml  3RD-PARTY.md  CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: macos.yml  ubuntu.yml  ubuntu_codecov.yml  windows.yml
CMake/: CompileOptions.cmake
cmake/: CompileOptions.cmake
include/: styler.hpp
test/: CMakeLists.txt  color_test.cpp  feature_test.cpp
test/feature_test/: CMakeLists.txt  main.cpp
test/unit_test/: CMakeLists.txt  main.cpp
